# ED_Lib

./: .gitignore  CMakeLists.txt  ED.cpp  ED.h  EDCircles.cpp  EDCircles.h  EDColor.cpp  EDColor.h  EDLines.cpp  EDLines.h  EDPF.cpp  EDPF.h  NFA.cpp  README.md  appveyor.yml  test.cpp  test_ED.cpp  test_it.cpp  test_runway.cpp  timer.h  video_test.cpp
src/: ED.cpp  EDCircles.cpp  EDCircles.h  EDColor.cpp  EDColor.h  EDLib.h  EDLines.cpp  EDPF.cpp  LICENSE  NFA.h
